SERVER-68901 ignore expressions under  in query analysis

GitOrigin-RevId: 7c9ae4fceead32df5eccb56983c39a38bd723e80